# rust-lang-discovery

./: .gitignore  LICENSE  README.md
ftp-server/: Cargo.toml
ftp-server/src/: client.rs  connection.rs  data_connection.rs  ftp_error.rs  ftp_logger.rs  main.rs  message.rs  protocol_codes.rs  server.rs  utils.rs
ftp/client/: Cargo.toml
ftp/client/src/: ftp_error.rs  main.rs  server.rs
ftp/client/src/client_ftp/: mod.rs
ftp/client/src/ftp_client/: command.rs  mod.rs
ftp/client/src/ftp_server/: ftp_user.rs  mod.rs
ftp/client/src/protocol/: mod.rs
ftp/client/src/server_ftp/: client.rs  mod.rs  user_ftp.rs
ftp/server/src/: client.rs  main.rs  protocol_codes.rs  utils.rs
hello-world/src/: main.rs  main_enum.rs  main_generic.rs  main_generic_2.rs  main_generic_3.rs  main_macro.rs  main_struct.rs  main_trait.rs  main_tuple.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs  main_enum.rs  main_generic.rs  main_generic_2.rs  main_generic_3.rs  main_macro.rs  main_struct.rs  main_trait.rs  main_tuple.rs
music-player/: Cargo.toml
music-player/src/: main.rs  main_gtk.rs  model.rs  mp3.rs  player.rs  playlist.rs  toolbar.rs  utils.rs  view.rs
music-player/src/model/: mod.rs  music.rs
music-player/src/view/: main_window.rs  mod.rs  playlist.rs  toolbar.rs
tetris/: Cargo.toml
tetris/assets/: file.txt  score.txt
tetris/src/: main.rs  main_blink_square.rs  main_image.rs  main_save.rs  view.rs
tetris/src/controler/: mod.rs
tetris/src/model/: coordinate.rs  game.rs  mod.rs  score.rs  tetrimino.rs
tetris/src/view/: mod.rs
(+14 files in other folders)
