[package]
name = "ftp-server"
version = "0.0.1"
edition = "2021"

[dependencies]
regex = "1.5.5"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
tokio = { version = "1", features = ["full"] }
tokio-core = "0.1.18"
tokio-io = "0.1.13"
bytes = "1.1.0"
futures = "0.3.21"
async-std = "1.11.0"
log = { version = "0.4.16", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.9.0"
async-shutdown = "0.1.2"
portpicker = "0.1.1"
users = "0.11.0"
chrono = "0.4.19"
