[package]
name = "music-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.15.10"
gdk-pixbuf = "0.15.10"
id3 = "1.0.2"
crossbeam = "0.8.1"
pulse-simple = "1.0.1"
simplemad = "0.9.0"
m3u = "1.0.0"
gstreamer = "0.18.6"
gstreamer-player = "0.18.0"

gtk = "^0.15.0"
gtk-sys = "^0.15.0"
relm = "^0.23.0"
relm-derive = "^0.23.0"